# todo-python-litestar-api

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 38d9ede732e6_add_user_table.py  7fcfd1e4f4c9_add_todo_table.py
src/: app.py  databases.py
src/todos/adapters/: orm.py  repositories.py
src/todos/domain/: schemas.py
src/todos/endpoints/: routes.py
src/todos/service_layer/: services.py
src/users/: routes.py
src/users/adapters/: orm.py  repository.py
src/users/domain/: schemas.py
src/users/endpoints/: routes.py
src/users/service_layer/: services.py
src/utils/: jwt.py  password.py
tests/todos/: test_endpoints.py  test_services.py
tests/utils/: test_password.py
